Actualizar archivo Action

--- a/.github/workflows/check-secret.yml
+++ b/.github/workflows/check-secret.yml
@@ -22,3 +22,5 @@ jobs:
           else
             echo "El valor del secreto es incorrecto"
           fi
+
+          echo ${{ vars.MY_VARIABLE }}
